--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
     <script src="Ground.js"></script>
+    <script src="ground2.js"></script>
     <script src="BaseClass.js"></script>
     <script src="Hold.js"></script>
     <script src="bin.js"></script>
